update mail info

--- a/wh2016/index.html
+++ b/wh2016/index.html
@@ -57,7 +57,7 @@
 </style>
 <div class="board">
 <h2>深大白帽2016招新测试（第二次）</h2>
-<p>请按次序答题然后讲答案发送到藰茤蒝师兄的邮箱<span class='stamp-alert'>anderain.ryu@qq.com</span>，邮件标题标注姓名。</p>
+<p>请按次序答题，将答案发送到藰茤蒝师兄的邮箱<span class='stamp-alert'>anderain.ryu@qq.com</span>，邮件标题标注姓名。</p>
 <p>不限考试地点，不限使用搜索引擎、开发工具。截止时间为2016年12月10日晚21:00。</p>
 </div>
 <div class="board">
@@ -84,11 +84,11 @@
 </pre>
 <pre class="code-font">
 int main() {
-    printf("%\143~\0Play",
-        printf("%\x73", &(2 +
-            printf("%.1s", "Mad Max"))["Video"])[
-                "Game!"] + 0xA);
-    return 0;
+	return 
+		printf("%\143~\0Play",
+			printf("%\x73", &(2 +
+				printf("%.1s", "Mad Max"))["Video"])[
+					"Game!"] + 0xA);
 }
 </pre>
 </div>
