clear card title

--- a/article.html
+++ b/article.html
@@ -50,7 +50,7 @@
      <div class="card" id="card-caption">
        <div class="card-image">
          <div id="cover-image" class="cover-image"></div>
-         <span id='card-title' class="card-title title-shadow">Card Title</span>
+         <span id='card-title' class="card-title title-shadow"></span>
        </div>
        <div class="card-content">
          <p id='subtitle'></p>
