--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- mobile chrome color -->
   <meta name="theme-color" content="#1976d2">  
   <META name="author" content="Materialize中文网">
+  <link href="/favicon.ico" rel="icon" type="image/x-icon" />
   <title>HOME | 初春·姫</title>
   <link rel="stylesheet" href="./public/css/materialize.min.css"/>
   <link rel="stylesheet" href="./public/css/theme.css"/>
@@ -136,7 +137,7 @@
             <li><a class="grey-text text-lighten-3" href="http://tonoko.zz.mu/">tonoko | non-existent ever</a></li>
             <li><a class="grey-text text-lighten-3" href="http://ao.acg.ac/">苍崎橙子</a></li>
             <li><a class="grey-text text-lighten-3" href="https://www.zephray.com/">Zephray's Space</a></li>
-            <li><a class="grey-text text-lighten-3" href="https://www.ntzyz.cn/">ntzyz的主页</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://www.ntzyz.cn/">namespace ntzyz;</a></li>
           </ul>
         </div>
       </div>
