add home page link

--- a/article.html
+++ b/article.html
@@ -31,6 +31,7 @@
             <li><a href="/about.html">工作室</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
+            <li><a href="/">主页</a></li>
             <li><a href="/list.html?tag=all">文章</a></li>
             <li><a href="/list.html?tag=game">游戏</a></li>
             <li><a href="/list.html?tag=game-device">游戏设备</a></li>
