--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
   <script src="./public/js/jquery.min.js"></script>
   <script src="./public/js/materialize.min.js"></script>
   <script src="./public/js/prism.js"></script>
+  <script src="./public/js/date-calc.js"></script>
   <script src="./public/js/index.js"></script>
 </body>
 </html>
