fix typo in question

--- a/wh2016/index.html
+++ b/wh2016/index.html
@@ -154,6 +154,10 @@
 <hr />
 <pre class='code-font'>
 <span class="sc9">#include "stdio.h"</span>
+<span class="sc0">
+</span><span class="sc16">int</span><span class="sc0"> </span><span class="sc11">binary_search</span><span class="sc10">(</span><span class="sc16">int</span><span class="sc0"> </span><span class="sc11">arr</span><span class="sc10">[],</span><span class="sc0"> </span><span class="sc16">int</span><span class="sc0"> </span><span class="sc11">length</span><span class="sc10">,</span><span class="sc0"> </span><span class="sc16">int</span><span class="sc0"> </span><span class="sc11">key</span><span class="sc10">)</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
+    </span><span class="sc2">// code here
+</span><span class="sc10">}</span>
 
 </span><span class="sc16">int</span><span class="sc0"> </span><span class="sc11">main</span><span class="sc10">()</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0">
     </span><span class="sc16">int</span><span class="sc0"> </span><span class="sc11">a</span><span class="sc10">[]</span><span class="sc0"> </span><span class="sc10">=</span><span class="sc0"> </span><span class="sc10">{</span><span class="sc0"> </span><span class="sc4">1</span><span class="sc10">,</span><span class="sc4">2</span><span class="sc10">,</span><span class="sc4">3</span><span class="sc10">,</span><span class="sc4">4</span><span class="sc10">,</span><span class="sc4">5</span><span class="sc10">,</span><span class="sc4">6</span><span class="sc10">,</span><span class="sc4">7</span><span class="sc10">,</span><span class="sc4">8</span><span class="sc10">,</span><span class="sc4">9</span><span class="sc0"> </span><span class="sc10">};</span><span class="sc0">
