change date; add friendlink

--- a/index.html
+++ b/index.html
@@ -138,13 +138,14 @@
             <li><a class="grey-text text-lighten-3" href="http://ao.acg.ac/">苍崎橙子</a></li>
             <li><a class="grey-text text-lighten-3" href="https://www.zephray.com/">Zephray's Space</a></li>
             <li><a class="grey-text text-lighten-3" href="https://www.ntzyz.cn/">namespace ntzyz;</a></li>
+            <li><a class="grey-text text-lighten-3" href="http://futa.eu/">来和希酱签订契约成为魔法师吧~</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-        © 2016 BackToUiharu Copyright
+        © 2017 BackToUiharu Copyright
         <a class="grey-text text-lighten-4 right" href="about.html">About</a>
       </div>
     </div>
